# aragon-zkGovernance

./: .env.example  .gitignore  Cargo.toml  README.md  test-sepolia.sh
apps/: Cargo.toml
apps/src/: delegation_strategies.rs  execution_strategies.rs  lib.rs  voting_power_strategies.rs
apps/src/delegation_strategies/: split_delegation.rs
apps/src/execution_strategies/: majority_voting.rs
apps/src/voting_power_strategies/: balance_of.rs  get_past_votes.rs
contracts/: MajorityVotingBase.sol  RiscVotingProtocolPlugin.sol  RiscVotingProtocolPluginSetup.sol
contracts/mocks/: RiscZeroMockVerifier.sol
script/: DeployCounter.s.sol
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: main.rs
strategies/src/: execution_strategies.rs  lib.rs
strategies/src/delegation_strategies/: split_delegation.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
tests/tests/: integration_tests.rs  integrtion_test.rs
